Add 'Research' link to navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
     url: /portfolio/
   - title: "About"
     url: /_pages/about
+  - title: "Research"
+    url: /_pages/research
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
